--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bank</title>
+  <title>My Bank</title>
   <!-- **************************FAVICON****************************** -->
-  <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="images/favicon.jpg" type="image/x-icon">
 
   <!-- **************************GOOGLE FONT************************** -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -21,7 +21,7 @@
   <nav>
     <p class="welcome">Log in to get started</p>
     <div class="logo">
-      <img src="images/logo.png" alt="">
+      <img src="images/favicon.jpg" alt="">
     </div>
     <form class="login-form">
       <input type="text" placeholder="Username" class="user" id="username">
@@ -37,7 +37,7 @@
     <div id="balance-section-header">
       <div>
         <p class="current-balance-title">Current balance</p>
-        <p class="current-date">As of 21/9/2022</p>
+        <p class="current-date">As of <span class="date">21/9/2022</span></p>
       </div>
       <p class="current-balance"><span id="current-balance-amount">1000</span>$</p>
     </div>
@@ -47,25 +47,7 @@
       <!-- *************************TRANSACTIONS************************* -->
       <div id="transactions">
         <!-- Single Transaction -->
-
-        <!--  <div class="single-transaction">
-          <div class="transaction-details">
-            <p class="transaction-state deposit"><small>5 deposit</small></p>
-            <p class="transaction-date"><small>5 days ago</small></p>
-          </div>
-          <p class="transaction-amount">1000$</p>
-        </div>
-                
-        <div class="single-transaction">
-          <div class="transaction-details">
-            <p class="transaction-state withdrawal"><small>5 withdrawal</small></p>
-            <p class="transaction-date"><small>21/9/2022</small></p>
-          </div>
-          <p class="transaction-amount">-1000$</p>
-        </div> -->
-
       </div>
-
 
       <!-- ************************BANK OPERATIONS************************ -->
       <div id="bank-operation">
@@ -144,10 +126,11 @@
 
   <!-- *****************************FOOTER***************************** -->
   <footer>
-    <p>&copy; 2022, <strong>Bank</strong> by Tahmina Akter Tanni. All rights reserved.</p>
+    <p>&copy; 2022, <strong>My Bank</strong> by Tahmina Akter Tanni. All rights reserved.</p>
   </footer>
 
   <script src="js/script.js"></script>
 </body>
 
 </html>
+<!-- http://www.lingoes.net/en/translator/langcode.htm -->
